--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="250x280" href="/images/logo.png">
+    <link rel="icon" type="image/png" sizes="250x280" href="/static/images/logo.png">
     <title>Login - TaskXcel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -72,7 +72,7 @@
 <body>
 <div class="login-card">
     <div class="logo-container">
-    <img src="/images/logo.png" alt="TaskXcel Logo" class="logo">
+    <img src="/static/images/logo.png" alt="TaskXcel Logo" class="logo">
 </div>
     <h2>Login</h2>
     <form th:action="@{/logIn}" th:object="${user}" method="post">
